# murkfi

./: .gitignore  README.md  makerkey.json  market_maker.py
market-maker/: README.md  market_maker.py  murk_protocol.json  requirements.txt
murkfi/: Anchor.toml
murkfi/programs/murkfi/: Cargo.toml
murkfi/tests/: murkfi.ts
programs/vault/: README.md  package.json
programs/vault-dev/: Anchor.toml  Makefile
programs/vault-dev/app/: client.ts  utils.ts
programs/vault-dev/tests/: deposit.ts  vault-dev.ts  vault.ts
programs/vault-v0/: Anchor.toml  Makefile  README.md  package.json
programs/vault-v0/client/: client.ts
programs/vault-v0/tests/: anchor.ts  vault.ts
programs/vault/app/: utils.ts
programs/vault/programs/vault/: Cargo.toml
programs/vault/programs/vault/src/: error.rs  lib.rs
programs/vault/programs/vault/src/instructions/: guardian.rs  mod.rs  state.rs  vault.rs
programs/vault/programs/vault/src/state/: events.rs  guardian.rs  mod.rs  state.rs  traits.rs  user.rs  vault.rs
programs/vault/tests/: deposit.ts  vault.ts
programs/vault_v0/: Anchor.toml
programs/vault_v0/client/: client.ts
web-app/: .eslintrc.js  LICENSE  README.md  next.config.mjs  package.json
web-app/components/: footer.tsx  header.tsx  layout.tsx
web-app/components/landing-page/: card-wrapper.tsx
web-app/components/other/: coming-soon.tsx
web-app/components/strategy/: hero.tsx  strategy-collection.tsx  strategy.tsx
web-app/config/: site.ts
web-app/pages/: _app.tsx  coming-soon.tsx  index.tsx
web-app/utils/: db.ts  truncate.ts  utils.ts
(+19 files in other folders)
