[package]
name = "murkfi"
version = "0.1.0"
description = "Murk Finance Program Library"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "murkfi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = "4.0.0"
